--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
 
 <!--Header overlay info-->    
-    <header class="page-header header container-fluid">
+    <header class="page-header header container-fluid"img src = "https://cdn.wallpaper.com/main/styles/responsive_1460w_scale/s3/sunlight-cliff-rt-roadtrip-2021-5138-1800x1200.jpg?itok=0o1I5MHx"></header>
         <div class="overlay"></div>
         <div class="description">
             <h1>Welcome to the Landing Page!</h1>
