--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html" >About</a>
@@ -34,6 +34,18 @@
             </ul>
         </div>
     </nav>
+
+<!--    <div class ="navigation-bar">
+        <div class="nav-logo" img src= ""></div>
+            <div class ="links">
+                <ul>
+                <li><a href ="index.html">Home</li></a> 
+                <li><a href="about.html">About></li></a>
+                <li><a href="contact.html">Contact</li></a>           
+                </ul>
+            </div> 
+    </div>--> 
+    
 
 <!--Header overlay info-->    
     <header class="page-header header container-fluid"img src = "images/van1.jpg"></header>
