--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
 
 <!--Header overlay info-->    
-    <header class="page-header header container-fluid"img src = "images/van1.jpg"></header>
+    <header class="page-header header container-fluid"></header>
         <div class="overlay"></div>
         <div class="description">
             <h1>Welcome to the Landing Page!</h1>
