--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
 
 <!--Header overlay info-->    
     <header class="page-header header container-fluid"></header>
+    <header class ="header1"><!--<img src ="images/van2.jpg">--></header>
         <div class="overlay"></div>
         <div class="description">
             <h1>Welcome to the Landing Page!</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
+        </div>
         </div>
     </header>
 
