--- a/index.html
+++ b/index.html
@@ -29,22 +29,12 @@
                     <a class="nav-link" href="about.html" >About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-<!--    <div class ="navigation-bar">
-        <div class="nav-logo" img src= ""></div>
-            <div class ="links">
-                <ul>
-                <li><a href ="index.html">Home</li></a> 
-                <li><a href="about.html">About></li></a>
-                <li><a href="contact.html">Contact</li></a>           
-                </ul>
-            </div> 
-    </div>--> 
     
 
 <!--Header overlay info-->    
